updated formatting with prettier, added config to package.json

--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "dependencies": {
     "core-js": "^2.5.1",
+    "husky": "^0.14.3",
+    "lint-staged": "^4.3.0",
+    "prettier": "^1.7.4",
     "react": "^16.0.0",
     "react-cropper": "^1.0.0",
     "react-dom": "^16.0.0",
@@ -12,7 +15,14 @@
     "redux": "^3.7.2",
     "redux-form": "^7.1.2"
   },
+  "lint-staged": {
+    "src/**/*.{js,jsx,json,css}": [
+      "prettier --single-quote --write",
+      "git add"
+    ]
+  },
   "scripts": {
+    "precommit": "lint-staged",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
