--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "private": true,
   "dependencies": {
     "core-js": "^2.5.1",
+    "dropzone": "^5.2.0",
     "husky": "^0.14.3",
     "lint-staged": "^4.3.0",
     "prettier": "^1.7.4",
     "react": "^16.0.0",
     "react-cropper": "^1.0.0",
     "react-dom": "^16.0.0",
+    "react-dropzone": "^4.2.2",
     "react-redux": "^5.0.6",
     "react-scripts": "1.0.14",
     "redux": "^3.7.2",
